Use crac to start faster