@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 #
 #  Copyright 2023 The original authors
 #
@@ -15,4 +15,9 @@
 #  limitations under the License.
 #
 
-java -XX:CRaCRestoreFrom=$HOME/ianopolousfast --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_ianopolousfast
+source "$HOME/.sdkman/bin/sdkman-init.sh"
+sdk use java 21.0.2.crac-zulu 1>&2
+
+JAVA_OPTS="--enable-preview --add-modules=jdk.incubator.vector -Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0 -XX:-UseTransparentHugePages -XX:CRaCCheckpointTo=$HOME/ianopolousfast"
+
+java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_ianopolousfast
